--- a/templates/index.html
+++ b/templates/index.html
@@ -1,19 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Stanley's Python Web App</title>
+    <title>Aaron's Python Web App</title>
 </head>
+
 <body>
     {%extends "templates.html" %}
     {% block content %}
 
-    <h2>A Simple Pyton Web App</h2>
-    <p>Hello Word!!!!!!!, Our Web App is up and running</p>
+    <h2>A Highly Advanced Python Web App</h2>
+    <img src="https://media.licdn.com/dms/image/D4E03AQGgZnC4tN334w/profile-displayphoto-shrink_200_200/0/1708692856187?e=2147483647&v=beta&t=iWpyhQjf94BR7NCDqb9LVOG531HS8jXTpnU8OzoK29U"
+        alt="Cute Puppy" />
 
     {% endblock %}
 
 </body>
+
 </html>
