--- a/templates/index.html
+++ b/templates/index.html
@@ -15,6 +15,7 @@
     <h2>A Highly Advanced Python Web App</h2>
     <img src="https://media.licdn.com/dms/image/D4E03AQGgZnC4tN334w/profile-displayphoto-shrink_200_200/0/1708692856187?e=2147483647&v=beta&t=iWpyhQjf94BR7NCDqb9LVOG531HS8jXTpnU8OzoK29U"
         alt="Cute Puppy" />
+    <p>Michal</p>
 
     {% endblock %}
 
